# fintech_arch

./: pyproject.toml  requ.txt  requirements.txt
notebooks/: clean_img.sh  conf.yaml  development.ipynb  diagrams.ipynb  index.ipynb  new_index.ipynb
notebooks/.ipynb_checkpoints/: development-checkpoint.ipynb  diagrams-checkpoint.ipynb  index-checkpoint.ipynb  new_index-checkpoint.ipynb
notebooks/diagram_gen/: __init__.py  architecture_generator.py
