[tool.poetry]
name = "fintech_arch"
version = "0.1.0"
description = ""
authors = ["Kamil Marczak <54755354+kamil1marczak@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.dev-dependencies]
wget = "*"
pandas = "*"
plotly = "*"
voila = "*"
diagrams = "*"
pypandoc = "*"
ipython = "*"
ipywidgets = "*"
jupyterthemes = "*"
jupyter-contrib-nbextensions = "*"
voila-material = "*"
ipyparallel = "*"
jupyter-flex = "*"
numpy = "*"
#nbinteract = "*"
nbconvert = "*"
jupyterlab = "*"
mkdocs = "*"
mkdocs-material = "*"
mkdocs-jupyter = "*"
mkdocs-minify-plugin = "*"
pymdown-extensions = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
